--- a/electricblock/css/style.css
+++ b/electricblock/css/style.css
@@ -1,3 +1,12 @@
+@-webkit-keyframes twinkling { /*透明度由0到1*/
+    0% {
+        opacity: 0; /*透明度为0*/
+    }
+    100% {
+        opacity: 1; /*透明度为1*/
+    }
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -32,7 +41,7 @@ header h1 {
 
 .container .palette {
     display: inline-block;
-    outline: solid 1px #1B9AF7;
+    /*outline: solid 1px #1B9AF7;*/
     position: relative;
 }
 
@@ -46,8 +55,6 @@ header h1 {
 }
 
 .container .palette .point {
-    background-color: #b1b1b1;
-    border: solid 2px #2f2f2f;
     position: absolute;
     border-radius: 100%;
     -webkit-transition: all 300ms;
@@ -55,53 +62,84 @@ header h1 {
     -ms-transition: all 300ms;
     -o-transition: all 300ms;
     transition: all 300ms;
+    background-color: #b8b6cb;
+    border: solid 4px #000;
+    z-index: 4;
+}
+
+.container .palette .point.flash {
+    -webkit-animation: twinkling 800ms infinite ease-in-out;
+    -webkit-animation-iteration-count: 2; /*动画次数*/
 }
 
 .container .palette .point:active {
     background-color: #088ef0;
-    border: solid 2px #0880d7;
+    border: solid 4px #0880d7;
     transform: scale(1.1);
 }
 
 .container .palette .point.hang-up {
     background-color: #088ef0;
-    border: solid 2px #00365d;
+    border: solid 4px #00365d;
 }
 
 .container .palette .point.active {
     background-color: #FEAE1B;
-    border: solid 2px #b57500;
+    border: solid 4px #b57500;
 }
 
 .container .palette .line {
-    position: absolute;
     -webkit-transition: all 300ms;
     -moz-transition: all 300ms;
     -ms-transition: all 300ms;
     -o-transition: all 300ms;
     transition: all 300ms;
+    z-index: 2;
 }
 
 .container .palette .line .v {
-    width: 2px;
-    background-color: #FEAE1B;
-    border: solid 1px #b57500;
-    border-radius: 1px;
+    position: absolute;
+    display: block;
+    background-color: rgba(254, 174, 27, 0.67);
+    -webkit-transition: height 1s;
+    -moz-transition: height 1s;
+    -ms-transition: height 1s;
+    -o-transition: height 1s;
+    transition: height 1s;
+    z-index: 2;
 }
 
 .container .palette .line .h {
-    height: 2px;
-    background-color: #FEAE1B;
-    border: solid 1px #b57500;
-    border-radius: 1px;
+    position: absolute;
+    display: block;
+    background-color: rgba(254, 174, 27, 0.67);
+    -webkit-transition: width 1s;
+    -moz-transition: width 1s;
+    -ms-transition: width 1s;
+    -o-transition: width 1s;
+    transition: width 1s;
+    z-index: 2;
 }
 
 .container .palette .line .close {
+    position: absolute;
     width: 20px;
     height: 20px;
-    background-color: #FEAE1B;
+    background-color: rgba(254, 174, 27, 0.9);
     border: solid 1px #b57500;
     border-radius: 100%;
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    z-index: 3;
+}
+
+.container .palette .line .close:active {
+    background-color: rgba(254, 174, 27, 0.82);
+    border: solid 1px #b57500;
+    transform: scale(1.1);
 }
 
 .container .palette .line .close:after {
@@ -129,4 +167,58 @@ footer {
 footer .button {
     margin-right: 2rem;
     z-index: 1;
+}
+
+.log-cat {
+    height: 200px;
+    background: #FFFFFF;
+    overflow: auto;
+    display: block;
+    position: fixed;
+    bottom: 80px;
+    z-index: 2;
+    width: 100%;
+    border-top: solid 2px #777;
+    display: none;
+}
+
+.log-cat .content {
+    padding: 1rem;
+    font-size: large;
+    list-style-position: inside;
+    list-style-type: decimal;
+}
+
+.log-cat .close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 20px;
+    height: 20px;
+    padding: 4px;
+    color: #ff0000;
+    text-align: center;
+    border-left: solid 1px #000000;
+    border-bottom: solid 1px #000000;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.69);
+    -webkit-transition: all 1s;
+    -moz-transition: all 1s;
+    -ms-transition: all 1s;
+    -o-transition: all 1s;
+    transition: all 1s;
+    cursor: pointer;
+}
+
+.log-cat .close:hover {
+    color: #a90c0c;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+.log-cat .close:after {
+    content: "\2715";
+    display: block;
+    line-height: 100%;
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
 }
